feat(infra) - WIP  run the app