@@ -93,10 +93,6 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
     <dependency>
@@ -312,6 +308,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+          <jvmArguments>--enable-native-access=ALL-UNNAMED -XX:+EnableDynamicAgentLoading</jvmArguments>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
